@@ -27,11 +27,6 @@
   <value>localjceks://file/opt/mr3-run/key/hivemr3-ssl-certificate.jceks</value>
 </property>
 
-<property>
-  <name>fs.s3a.aws.credentials.provider</name>
-  <value>com.amazonaws.auth.InstanceProfileCredentialsProvider</value>
-</property>
-
 <!-- 
   Upon the deletion of DAGAppMasterPod, HiveServer2 tries to connect to DAGAppMaster Pod at least twice
   and up to three times (acknowledgeDagFinished(), getEstimateNumTasksOrNodes(), getApplicationReport().
@@ -41,6 +36,60 @@
 <property>
   <name>ipc.client.connect.max.retries.on.timeouts</name>
   <value>3</value>
+</property>
+
+<!-- S3 -->
+
+<property>
+  <name>fs.s3a.aws.credentials.provider</name>
+  <value>com.amazonaws.auth.InstanceProfileCredentialsProvider</value>
+</property>
+
+<property>
+  <name>fs.s3a.connection.ssl.enabled</name>
+  <value>false</value>
+</property>
+
+<!--
+<property>
+  <name>fs.s3a.endpoint</name>
+  <value>http://orange0:9000</value>
+</property>
+
+<property>
+  <name>fs.s3a.path.style.access</name>
+  <value>true</value>
+</property>
+
+<property>
+  <name>fs.s3a.impl</name>
+  <value>org.apache.hadoop.fs.s3a.S3AFileSystem</value>
+</property>
+ -->
+
+<property>
+  <name>fs.s3a.connection.maximum</name>
+  <value>250</value>
+</property>
+
+<property>
+  <name>fs.s3.maxConnections</name>
+  <value>250</value>
+</property>
+
+<property>
+  <name>fs.s3a.threads.max</name>
+  <value>20</value>
+</property>
+
+<property>
+  <name>fs.s3a.threads.core</name>
+  <value>15</value>
+</property>
+
+<property>
+  <name>fs.s3a.blocking.executor.enabled</name>
+  <value>false</value>
 </property>
 
 </configuration>
