@@ -28,6 +28,7 @@ function run_master {
     export HTTP2_DISABLE=true
 
     JAVA=$JAVA_HOME/bin/java
+    # alternatively these options can be added to mr3.am.launch.cmd-opts
     JAVA_OPTS="-Djavax.security.auth.useSubjectCredsOnly=false \
 -Djava.security.auth.login.config=/opt/mr3-run/conf/jgss.conf \
 -Djava.security.krb5.conf=/opt/mr3-run/conf/krb5.conf \
